--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <title>CSS Cascade</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
 
 <header>
     <h1>CSS Cascade</h1>
+    <style> p { background-color:#A6C6DF; color 191970}
+</style>
 </header>
 
 <main>
@@ -16,18 +19,16 @@
     <p>I might be new to web development, but I've learned a lot so far.</p>
 
     <h3>GitHub</h3>
-    <p>
+  <p style="background-color:#D3E5F3;">
         I've learned to manage code in repositories on GitHub.  This allows me
-        to be able to work on my projects anywhere.  No more worries about
-        losing a portable drive!
+        to be able to work on my projects anywhere.  No more <br>
+        worries about losing a portable drive!
     </p>
 
     <h3>Basic HTML</h3>
-    <p>
-        I've also learned to write some of the most common HTML tags, and to
-        write HTML for structure not appearance. Some of the tags that I've
-        learned include headings (&lt;h1&gt;, &lt;h2&gt;, &lt;h3&gt;, etc.),
-        paragraphs, and lists.  I've also learned to use special entity characters.
+    <p id="learning">
+        I've also learned to write some of the most common HTML tags, and to write HTML for structure not appearance. Some of <br>
+        the tags that I've learned include headings (&lt;h1&gt;, &lt;h2&gt;, &lt;h3&gt;, etc.),paragraphs, and lists.  I've also learned to use special<br> entity characters.
     </p>
 
     <h3>Favorite Things</h3>
@@ -42,8 +43,8 @@
 
 <footer>
     <hr>
-    Copyright &copy; 2015 by Your Name. <br>
-    Contact me at <a href="mailto:you@somewhere.com">Your@EmailAddress</a>
+    Copyright &copy; 2015 by Vedaste Rurangwa. <br>
+    Contact me at <a href="mailto:vedaste@gmail.com">vedaster@gmail.com</a>
 </footer>
 </body>
 </html>
